# remote_hid

./: ARCHITECTURE.md  BUILD.md  Cargo.toml  DESIGN.md  Makefile  README.md  demo.sh  instructions.txt
commander/: Cargo.toml
commander/src/: client.rs  input_capture.rs  main.rs  tests.rs
hid-client/: Cargo.toml
hid-client/src/: client.rs  hid.rs  main.rs  tests.rs
session-server/: Cargo.toml
session-server/src/: config.rs  main.rs  server.rs  session.rs  tests.rs
shared/: Cargo.toml
shared/src/: auth.rs  error.rs  lib.rs  protocol.rs  tests.rs
tests/: Cargo.toml  integration_tests.rs
