[workspace]
members = [
    "session-server",
    "hid-client", 
    "commander",
    "shared"
]
resolver = "2"

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication and security
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# TLS and networking
rustls = "0.21"
rustls-pemfile = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
clap = { version = "4.0", features = ["derive"] }
config = "0.14"

# Testing
tokio-test = "0.4"
mockall = "0.12"

# Platform-specific dependencies defined in individual crates
