[package]
name = "commander"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commander"
path = "src/main.rs"

[dependencies]
remote-hid-shared = { path = "../shared" }

# Async and networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Input capture dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }