[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
remote-hid-shared = { path = "../shared" }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

[[test]]
name = "integration_tests"
path = "integration_tests.rs"